--- a/BeamWallet/ViewControllers/Main/Wallet/Receive/Cells/ReceiveAddressOptionsCell_2.xib
+++ b/BeamWallet/ViewControllers/Main/Wallet/Receive/Cells/ReceiveAddressOptionsCell_2.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17156" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17126"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -15,18 +15,18 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="ReceiveAddressOptionsCell_2" rowHeight="-186" id="073-jm-iBu" customClass="ReceiveAddressOptionsCell_2" customModule="BeamWallet" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="100"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="ReceiveAddressOptionsCell_2" rowHeight="105" id="073-jm-iBu" customClass="ReceiveAddressOptionsCell_2" customModule="BeamWallet" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="107"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="073-jm-iBu" id="jKB-gO-h6p">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="100"/>
+            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" ambiguous="YES" tableViewCell="073-jm-iBu" id="jKB-gO-h6p">
+                <rect key="frame" x="0.0" y="0.0" width="320" height="107"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="LIs-2V-53p">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="100"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="TRANSACTION TYPE" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kU4-ci-51R">
-                                <rect key="frame" x="15" y="15" width="290" height="17"/>
+                                <rect key="frame" x="15" y="20" width="290" height="17"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="17" id="jGp-so-H4r"/>
                                 </constraints>
@@ -41,7 +41,7 @@
                                 </userDefinedRuntimeAttributes>
                             </label>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="sqH-s7-2GE" customClass="MASegmentedControl" customModule="BeamWallet" customModuleProvider="target">
-                                <rect key="frame" x="15" y="42" width="258" height="40"/>
+                                <rect key="frame" x="15" y="47" width="258" height="40"/>
                                 <color key="backgroundColor" red="0.25490197539999998" green="0.27450981740000002" blue="0.30196079609999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="40" id="uVD-jT-SMn"/>
@@ -59,15 +59,15 @@
                             <constraint firstAttribute="height" constant="100" id="A9p-wh-9RS"/>
                             <constraint firstItem="sqH-s7-2GE" firstAttribute="top" secondItem="kU4-ci-51R" secondAttribute="bottom" constant="10" id="L2E-ze-HOF"/>
                             <constraint firstItem="kU4-ci-51R" firstAttribute="leading" secondItem="LIs-2V-53p" secondAttribute="leading" constant="15" id="M8M-5B-MED"/>
-                            <constraint firstItem="kU4-ci-51R" firstAttribute="top" secondItem="LIs-2V-53p" secondAttribute="top" constant="15" id="nRN-JD-bzk"/>
+                            <constraint firstItem="kU4-ci-51R" firstAttribute="top" secondItem="LIs-2V-53p" secondAttribute="top" constant="20" id="nRN-JD-bzk"/>
                         </constraints>
                     </view>
                 </subviews>
                 <constraints>
                     <constraint firstItem="LIs-2V-53p" firstAttribute="top" secondItem="jKB-gO-h6p" secondAttribute="top" id="4tD-xj-bVn"/>
                     <constraint firstItem="LIs-2V-53p" firstAttribute="leading" secondItem="jKB-gO-h6p" secondAttribute="leading" id="Ja7-UG-R6F"/>
-                    <constraint firstAttribute="bottom" secondItem="LIs-2V-53p" secondAttribute="bottom" id="P3Q-qT-wAJ"/>
                     <constraint firstAttribute="trailing" secondItem="LIs-2V-53p" secondAttribute="trailing" id="adH-vS-Apr"/>
+                    <constraint firstAttribute="bottom" secondItem="LIs-2V-53p" secondAttribute="bottom" constant="12" id="g1B-2U-jmz"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="Jg9-g0-r5g"/>
